# vlstm

./: .gitignore  CMakeLists.txt  Makefile  README  autismexamine.cc  autismtrain.cc  bratsprocess.cc  bratstrain.cc  eval.cc  evalbrain.cc  halfvolumes.cc  icub.cc  icubeval.cc  main.cc  mainbrain.cc  normalization.py  raw.h  server.cc  tiff.h
inc/: cudavec.h  divide.h  log.h  read_vtk.h  trainer.h  vlstm.h  volume.h  volumenetwork.h  volumeoperation.h  walk.h
src/: cudavec.cu  divide.cu  log.cc  read_niftii.cc  read_vtk.cc  trainer.cc  vlstm.cc  volume.cc  volumenetwork.cc  volumeoperation.cc
